traversal.line.traversalbyline.TraversalByLine.scala.error
Erreur de compilation :
TraversalByLine:17: error: ';' expected but ')' found.
  if(getMondeLargeur())==getX()+1)
                                 ^